# snorkelforecast

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SEO_DESIGN_AUDIT.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  prd.md  pyproject.toml  ruff.toml  startup.sh  tailwind.config.js  tailwind.config.mjs  test_osm_import.py
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
conditions/: admin.py  alerts.py  apps.py  context_processors.py  guides.py  history.py  locations.py  models.py  models_spots.py  osm.py  scheduler.py  sitemaps.py  snorkel.py  urls.py  views.py  world_spots.py  world_spots_2.py  world_spots_3.py
conditions/migrations/: 0001_initial.py  0002_add_snorkel_location_model.py  0003_importtile_osmspot.py  0004_add_locationforecastsnapshot.py  0005_forecasthour_country_time_index.py  0006_snorkellocation_area_slug.py  0007_seed_maui_snorkel_spots.py  0008_snorkellocation_best_time_snorkellocation_difficulty_and_more.py  0009_seed_hawaii_snorkel_spots.py
conditions/templatetags/: localized_urls.py
conditions/tests/: test_alerts.py  test_best_snorkeling_pages.py  test_forecast_view_helpers.py  test_forecast_view_payload.py  test_i18n_seo.py  test_location_forecast_template.py  test_scheduler.py  test_scoring.py
screenshots/: README.md
snorkelforecast/: manage.py  urls.py
snorkelforecast/snorkelforecast/: asgi.py  settings.py  urls.py  wsgi.py
static/: robots.txt
static/css/: output.css  ui.css
ux/: ux-project.md
(+32 files in other folders)
