[project]
name = "snorkelforecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    [project.dependencies]
Django = "^5.0.3"
httpx = "^0.27.0"
python-dateutil = "^2.9.0"
whitenoise = "^6.6.0"            # serve static in prod
gunicorn = "^22.0.0"
]

[project.optional-dependencies]
dev = [
    "tailwindcss",
]
