[project]
name = "snorkelforecast"
version = "0.1.0"
description = "Carboneras snorkelling forecast using Open‑Meteo"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0.3",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "whitenoise>=6.6.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[build-system]
requires = ["uv>=0.1.35"]
build-backend = "uv.build"
